# rust-software-architecture

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md  book.toml  course.manifest.json
benches/: 01-monolito-modular-costos.md  02-arquitectura-hexagonal-costos.md  03-clean-architecture-costos.md  04-domain-driven-design-costos.md  05-cqrs-costos.md  06-event-sourcing-costos.md  07-arquitectura-orientada-a-eventos-costos.md  08-microservicios-costos.md
diagrams/: 01-monolito-modular.md  02-arquitectura-hexagonal.md  03-clean-architecture.md  04-domain-driven-design.md  05-cqrs.md  06-event-sourcing.md  07-arquitectura-orientada-a-eventos.md  08-microservicios.md
docs/: 00-caso-comun-y-frontera.md  00-glosario.md  00-introduccion.md  00-ruta-de-lectura.md  01-monolito-modular.md  02-arquitectura-hexagonal.md  03-clean-architecture.md  04-domain-driven-design.md  05-cqrs.md  06-event-sourcing.md  07-arquitectura-orientada-a-eventos.md  08-microservicios.md  09-navegacion-y-enlaces.md  10-publicacion-candidata.md  SUMMARY.md  flujo-autonomo.md  manifiesto-curso.md  plantilla-capitulo-arquitectura.md
examples/: 01_basico.rs  01_intermedio.rs  01_realista.rs  01_solucion.rs  02_basico.rs  02_intermedio.rs  02_realista.rs  02_solucion.rs  03_basico.rs  03_intermedio.rs  03_realista.rs  03_solucion.rs  04_basico.rs  04_intermedio.rs  04_realista.rs  04_solucion.rs  05_basico.rs  05_intermedio.rs  05_realista.rs  05_solucion.rs  06_basico.rs  06_intermedio.rs  06_realista.rs  06_solucion.rs  07_basico.rs  07_intermedio.rs  07_realista.rs  07_solucion.rs  08_basico.rs  (+3 more)
(+18 files in other folders)
