[package]
name = "rust-software-architecture"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-software-architecture"
description = "Arquitectura de software en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_software_architecture"
path = "src/lib.rs"

[dependencies]
